# Kaleidoscope

./: CMakeLists.txt  LICENSE  README.md  main.cpp
JIT/: CMakeLists.txt  JIT.cpp
codegen/: codegen.cpp
include/: AST.h  JIT.h  codegen.h  lexer.h  parser.h  version.inc.in
lexer/: CMakeLists.txt  lexer.cpp
parser/: parser.cpp
test/MandelbrotSet/: main.cpp  mandel.kpe
test/fib/: main.cpp
